Rename backToHome fn to goBack

--- a/ng-ECommerce/src/app/page-not-found/page-not-found.component.html
+++ b/ng-ECommerce/src/app/page-not-found/page-not-found.component.html
@@ -7,7 +7,7 @@
       The link is broken or the page has been mover, Back to previous page and check back again shortly.
     </p>
   </mat-card>
-  <button mat-button class="default-link" (click)="backToHome()">
+  <button mat-button class="default-link" (click)="goBack()">
     Back To Home
   </button>
 </div>
