Fix svg-icon src

--- a/ng-ECommerce/src/app/page-not-found/page-not-found.component.html
+++ b/ng-ECommerce/src/app/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="not-found-container flex-center">
   <mat-card class="msg-card flex-center">
-    <svg-icon mat-list-icon src="assets\icons\404-not-found.svg" [stretch]="true">
+    <svg-icon  src="../../assets/404-not-found.svg">
     </svg-icon>
     <p class="msg">A little lost? Let's try again.</p>
     <p class="Back-to-previous-page-and-check-back-again-shortly">
