--- a/ng-ECommerce/src/styles.scss
+++ b/ng-ECommerce/src/styles.scss
@@ -1,4 +1,51 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
 }
+
+.container {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.common-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30%;
+  text-align: center;
+  margin: auto;
+
+  .form-input {
+    height: 35px;
+    margin-bottom: .8rem;
+    width: 100%;
+    padding-left: 5px;
+    border: 1px solid blue;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+
+  .form-button {
+    height: 35px;
+    border: 1px solid blue;
+    cursor: pointer;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    font-weight: bold;
+    width: 100%;
+}
+}
+
+
