--- a/ng-ECommerce/src/app/seller-auth/seller-auth.component.scss
+++ b/ng-ECommerce/src/app/seller-auth/seller-auth.component.scss
@@ -5,3 +5,11 @@ h1 {
   margin-bottom: 3rem;
   color: blue;
 }
+
+.auth-toggle-link {
+  margin-top: 2rem;
+  color: blue;
+  cursor: pointer;
+  font-size: 14px;
+
+}
