--- a/ng-ECommerce/src/app/header/header.component.scss
+++ b/ng-ECommerce/src/app/header/header.component.scss
@@ -6,6 +6,11 @@
     color: blue;
     margin: 0;
     font-size: 30px;
+
+    a{
+      color: blue;
+      text-decoration: none;
+    }
   }
 
   .nav-search {
