--- a/ng-ECommerce/src/app/seller-add-product/seller-add-product.component.html
+++ b/ng-ECommerce/src/app/seller-add-product/seller-add-product.component.html
@@ -1,5 +1,6 @@
 <div class="add-product">
   <h1>Add New Product</h1>
+  <div class="message-p">{{addProductMessage}}</div>
   <form class="common-form" #addProduct="ngForm" (ngSubmit)="submit(addProduct.value)">
     <input class="form-input" name="name" ngModel type="text" placeholder="Enter Product Name">
     <input class="form-input" name="price" ngModel type="text" placeholder="Enter Product Price">
