--- a/ng-ECommerce/src/styles.scss
+++ b/ng-ECommerce/src/styles.scss
@@ -32,7 +32,7 @@ body {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
-}
+  }
 
   .form-button {
     height: 35px;
@@ -45,7 +45,9 @@ body {
     -o-border-radius: 5px;
     font-weight: bold;
     width: 100%;
-}
+  }
 }
 
-
+.message-p {
+  color: green;
+}
