--- a/ng-ECommerce/src/app/seller-home/seller-home.component.html
+++ b/ng-ECommerce/src/app/seller-home/seller-home.component.html
@@ -1,3 +1,25 @@
-<p>
-  seller-home works!
-</p>
+<div class="product-list">
+  <h1>All Product List</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Price</th>
+        <th>Color</th>
+        <th>Category</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let prdouct of productList">
+        <td><img src="{{prdouct.image}}"/></td>
+        <td>{{prdouct.name}}</td>
+        <td>{{prdouct.price}}</td>
+        <td>{{prdouct.color}}</td>
+        <td>{{prdouct.category}}</td>
+        <td>{{prdouct.description}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
