--- a/ng-ECommerce/src/app/seller-update-product/seller-update-product.component.html
+++ b/ng-ECommerce/src/app/seller-update-product/seller-update-product.component.html
@@ -1,12 +1,12 @@
 <div class="update-product">
   <h1>Update Product</h1>
   <form class="common-form" #updateProduct="ngForm" (ngSubmit)="submit(updateProduct.value)">
-    <input class="form-input" name="name" ngModel type="text" placeholder="Enter Product Name">
-    <input class="form-input" name="price" ngModel type="text" placeholder="Enter Product Price">
-    <input class="form-input" name="color" ngModel type="text" placeholder="Enter Product Color">
-    <input class="form-input" name="category" ngModel type="text" placeholder="Enter Product Category">
-    <textarea class="form-input" name="description" ngModel type="text" placeholder="Enter Product Description"></textarea>
-    <input class="form-input" name="image" ngModel type="text" placeholder="Enter Product Image URL">
+    <input class="form-input" name="name" ngModel="{{productData?.name}}" type="text" placeholder="Enter Product Name">
+    <input class="form-input" name="price" ngModel="{{productData?.price}}" type="text" placeholder="Enter Product Price">
+    <input class="form-input" name="color" ngModel="{{productData?.color}}" type="text" placeholder="Enter Product Color">
+    <input class="form-input" name="category" ngModel="{{productData?.category}}" type="text" placeholder="Enter Product Category">
+    <textarea class="form-input" name="description" ngModel="{{productData?.description}}" type="text" placeholder="Enter Product Description"></textarea>
+    <input class="form-input" name="image" ngModel="{{productData?.image}}" type="text" placeholder="Enter Product Image URL">
     <button class="form-button">Update Product</button>
   </form>
 </div>
