--- a/ng-ECommerce/src/app/seller-update-product/seller-update-product.component.html
+++ b/ng-ECommerce/src/app/seller-update-product/seller-update-product.component.html
@@ -1,5 +1,6 @@
 <div class="update-product">
   <h1>Update Product</h1>
+  <p class="message-p">{{productMessage}}</p>
   <form class="common-form" #updateProduct="ngForm" (ngSubmit)="submit(updateProduct.value)">
     <input class="form-input" name="name" ngModel="{{productData?.name}}" type="text" placeholder="Enter Product Name">
     <input class="form-input" name="price" ngModel="{{productData?.price}}" type="text" placeholder="Enter Product Price">
