Make Dynamic Product List in Home Page

--- a/ng-ECommerce/src/styles.scss
+++ b/ng-ECommerce/src/styles.scss
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/scss/bootstrap";
+
 * {
   box-sizing: border-box;
 }
@@ -50,4 +52,19 @@ body {
 
 .message-p {
   color: green;
+}
+
+.carousel-caption {
+  background-color: #00000082;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  background-color: black;
+  border: 5px;
 }
