--- a/ng-ECommerce/src/app/header/header.component.scss
+++ b/ng-ECommerce/src/app/header/header.component.scss
@@ -32,6 +32,26 @@
       height: 30px;
       border-left: 0px;
     }
+
+    .suggested-result {
+      position: absolute;
+      display: list-item !important;
+      z-index: 10;
+      width: 300px;
+      top: 40px;
+      border: 1px solid #ddd;
+      background-color: #fff;
+
+      li {
+        border: 1px solid #ddd;
+        padding: 5px;
+
+        a {
+          cursor: pointer;
+          color: blue;
+        }
+      }
+    }
   }
 
   ul {
