--- a/ng-ECommerce/src/app/search/search.component.html
+++ b/ng-ECommerce/src/app/search/search.component.html
@@ -1,11 +1,11 @@
-<div class="row search-item">
+<div class="row search-item" *ngFor="let product of searchResult">
   <div class="col-sm-3">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7GZNskvom7bvNxvqY2QvVVsSjIsIB5kPEKw&usqp=CAU" alt="Nice Image">
+    <img src="{{product.image}}" alt="Nice Image">
   </div>
   <div class="col-sm-8 details">
-    <h6>Product Name</h6>
-    <p><b>Price: 1000</b></p>
-    <p><span>color: Red</span><span>Category Mobile</span></p>
-    <p>A product search UI</p>
+    <h6>{{product.name}}</h6>
+    <p><b>Price: {{product.price}}</b></p>
+    <p><span>color: {{product.color}}</span><span>Category: {{product.category}}</span></p>
+    <p>{{product.description}}</p>
   </div>
 </div>
