--- a/ng-ECommerce/src/app/user-auth/user-auth.component.scss
+++ b/ng-ECommerce/src/app/user-auth/user-auth.component.scss
@@ -1,6 +1,16 @@
-.user-auth h1 {
-  margin-top: 50px;
-  margin-bottom: 80px;
-  color: blue;
-  text-align: center;
+.user-auth {
+  margin-bottom: 100px;
+
+  h1 {
+    margin-top: 50px;
+    margin-bottom: 80px;
+    color: blue;
+    text-align: center;
+  };
+
+  .common-form a {
+    color: blue;
+    cursor: pointer;
+  }
+
 }
