--- a/ng-ECommerce/src/styles.scss
+++ b/ng-ECommerce/src/styles.scss
@@ -54,6 +54,10 @@ body {
   color: green;
 }
 
+.error-p {
+  color: red;
+}
+
 .carousel-caption {
   background-color: #00000082;
   border-radius: 5px;
