--- a/ng-ECommerce/src/app/product-details/product-details.component.html
+++ b/ng-ECommerce/src/app/product-details/product-details.component.html
@@ -13,7 +13,7 @@
       <h6>Description: {{productData.description}}</h6>
       <button class="form-button">Buy Now</button>
       <button *ngIf="!removecart" class="form-button" (click)="addToCart()">Add To Cart</button>
-      <button *ngIf="!removecart" class="form-button" (click)="removeToCart(productData.id)">Remove To Cart</button>
+      <button *ngIf="removecart" class="form-button" (click)="removeToCart(productData.id)">Remove To Cart</button>
       <div class="quantity-group">
         <button (click)="handleQuantity('min')">-</button>
         <input type="text" value="{{productQuantity}}">
